small correction text alignment

--- a/assets/css/publications/publications.css
+++ b/assets/css/publications/publications.css
@@ -56,6 +56,7 @@
 .pub-text p {
     margin: 0 0 6px;
     font-size: 0.95rem;
+    text-align: left;
 }
 
 /* TAGS */
